# bad-apple

./: .gitignore  CMakeLists.txt  README.md
GraphicsProject/Assignment-1/src/: assignment-1.cpp
GraphicsProject/Assignment-4/src/: assignment-4.cpp  phong.frag  vertextransform.vert
GraphicsProject/Assignment-5/src/: assignment-5.cpp
GraphicsProject/DIKUgraphics/include/: badapple.h  camera.h
GraphicsProject/DIKUgraphics/src/: badapple.cpp  beziersurface.cpp  camera.cpp  edge.cpp  linerasterizer.cpp  parametricsurface.cpp  triangle.cpp
MP4_to_JPEG/: main.cpp  test_with_cat_image.cpp
